add validater feat
